[gd_scene load_steps=4 format=3 uid="uid://rjk6vayeqq6v"]

[ext_resource type="Script" uid="uid://doxh38iygryj5" path="res://scripts/main_character.gd" id="1_uvxui"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uvxui"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nrcqd"]
radius = 100.0

[node name="MainCharacter" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_uvxui")

[node name="DashTimer" type="Timer" parent="."]

[node name="BasicAttackTimer" type="Timer" parent="."]

[node name="HurtBox" type="Area2D" parent="."]

[node name="HurtBoxShape" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_uvxui")

[node name="InteractionBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="InteractionBoxShape" type="CollisionShape2D" parent="InteractionBox"]
shape = SubResource("CircleShape2D_nrcqd")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(0, 4.76837e-07)
scale = Vector2(1, 1.02041)
color = Color(1, 1, 0.121569, 1)
polygon = PackedVector2Array(-25, -25, -25, 25, 25, 25, 25, -25)

[node name="ShapeBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uvxui")
debug_color = Color(1, 0.0111394, 0.0238584, 0.42)
